--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "^2.6.1",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
+    "jade": "^1.11.0",
     "mongodb": "^3.1.13",
     "mongoose": "^5.4.19",
     "mongose": "0.0.2-security",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "pug": "^2.0.3"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
