--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "NODE_ENV=production forever start -w ./bin/server.js",
+    "test": "NODE_ENV=test forever start -w ./bin/server.js",
+    "debug": "NODE_ENV=develop forever start -w ./bin/server.js",
+    "local": "NODE_ENV=local forever start -w ./bin/server.js"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
