--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jade": "^1.11.0",
+    "jwt-simple": "^0.5.6",
+    "moment": "^2.24.0",
     "mongodb": "^3.1.13",
     "mongoose": "^5.4.19",
     "mongose": "0.0.2-security",
