--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^5.4.19",
     "mongose": "0.0.2-security",
     "morgan": "~1.9.0",
+    "multer": "^1.4.1",
     "pug": "^2.0.3"
   },
   "devDependencies": {
