--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "debug": "~2.6.9",
     "ejs": "^2.6.1",
     "express": "~4.16.0",
+    "forever": "^1.0.0",
     "http-errors": "~1.6.2",
     "jade": "^1.11.0",
     "mongodb": "^3.1.13",
-    "mongoose": "^5.5.6",
+    "mongoose": "^5.5.8",
     "mongose": "0.0.2-security",
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
