--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "debug": "~2.6.9",
     "ejs": "^2.6.1",
     "express": "~4.16.0",
+    "express-session": "^1.16.1",
     "forever": "^1.0.0",
     "http-errors": "~1.6.2",
     "jade": "^1.11.0",
