--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "local": "NODE_ENV=local forever start -w ./bin/server.js"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "crypto": "^1.0.1",
