--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "NODE_ENV=production forever start -w ./bin/server.js",
     "test": "NODE_ENV=test forever start -w ./bin/server.js",
     "debug": "NODE_ENV=develop forever start -w ./bin/server.js",
-    "local": "NODE_ENV=local forever start -w ./bin/server.js"
+    "local": "NODE_ENV=local forever start -w ./bin/server.js",
+    "noforever": "NODE_ENV=develop node ./bin/server.js"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
@@ -16,17 +17,18 @@
     "ejs": "^2.6.1",
     "express": "~4.16.0",
     "express-session": "^1.16.1",
+    "flag-icon-css": "^3.3.0",
     "forever": "^1.0.0",
     "http-errors": "~1.6.2",
     "jade": "^1.11.0",
-    "mongodb": "^3.2.5",
-    "mongoose": "^5.5.10",
+    "mongodb": "^3.2.6",
+    "mongoose": "^5.5.11",
     "mongose": "0.0.2-security",
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
     "pug": "^2.0.3"
   },
   "devDependencies": {
-    "nodemon": "^1.19.0"
+    "nodemon": "^1.19.1"
   }
 }
